erDiagram
    USERS {
        TEXT id PK
        TEXT firebase_uid UNIQUE
        TEXT email UNIQUE
        TEXT display_name
        TEXT role  "parent|admin"
        TEXT billing_customer_id
        INTEGER created_at
        INTEGER updated_at
    }

    CHILDREN {
        TEXT id PK
        TEXT primary_parent_user_id FK
        TEXT alias
        INTEGER dob_year
        INTEGER dob_month
        TEXT preferences_json
        TEXT consent_json
        INTEGER created_at
        INTEGER updated_at
    }

    CHILD_ACCESS {
        TEXT id PK
        TEXT child_id FK
        TEXT user_id FK
        TEXT persona_role  "parent|tutor|teacher|family"
        TEXT access_level  "viewer|contributor|manager"
        INTEGER is_manager  "0|1"
        TEXT invited_by_user_id FK
        INTEGER revoked_at
        INTEGER created_at
        INTEGER updated_at
    }

    CURRICULUM_TOPICS {
        TEXT id PK
        TEXT subject
        TEXT code
        TEXT title
        TEXT description
        TEXT prerequisites_json
        TEXT grade_band
        INTEGER created_at
    }

    LESSON_TEMPLATES {
        TEXT id PK
        TEXT topic_id FK
        TEXT title
        TEXT overview_asset_id FK
        TEXT style
        INTEGER difficulty
        TEXT status  "active|archived"
        TEXT created_by  "ai|user"
        TEXT created_by_user_id FK
        INTEGER created_at
        INTEGER updated_at
    }

    LESSON_INSTANCES {
        TEXT id PK
        TEXT lesson_template_id FK
        TEXT child_id FK
        TEXT title
        TEXT overview_asset_id FK
        TEXT style
        INTEGER difficulty
        TEXT personalization_params_json
        TEXT created_by_user_id FK
        TEXT status  "draft|active|archived"
        INTEGER created_at
        INTEGER updated_at
    }

    TASK_TEMPLATES {
        TEXT id PK
        TEXT topic_id FK
        TEXT lesson_template_id FK
        TEXT title
        TEXT style
        INTEGER difficulty
        TEXT variable_schema_json
        TEXT rubric_json
        TEXT definition_asset_id FK
        TEXT created_by  "ai|user"
        TEXT created_by_user_id FK
        TEXT status  "active|archived"
        INTEGER created_at
        INTEGER updated_at
    }

    TASK_INSTANCES {
        TEXT id PK
        TEXT task_template_id FK
        TEXT topic_id FK
        TEXT lesson_instance_id FK
        TEXT child_id FK
        TEXT role  "example|practice|assessment"
        TEXT example_root_task_instance_id FK
        TEXT title
        TEXT style
        INTEGER difficulty
        TEXT definition_asset_id FK
        TEXT answer_type  "numeric|text|multiple_choice|expression|sequence"
        TEXT expected_answer_json
        TEXT solution_explanation_asset_id FK
        TEXT created_by  "ai|user"
        TEXT created_by_user_id FK
        TEXT status  "active|archived"
        INTEGER created_at
        INTEGER updated_at
    }

    
    TASK_SET_TEMPLATES {
        TEXT id PK
        TEXT topic_id FK
        TEXT type  "exam|quiz|sequence"
        TEXT title
        TEXT description
        INTEGER time_limit_ms
        REAL passing_score
        TEXT status  "active|archived"
        TEXT created_by  "ai|user"
        TEXT created_by_user_id FK
        INTEGER created_at
        INTEGER updated_at
    }

    TASK_SET_TEMPLATE_ITEMS {
        TEXT id PK
        TEXT set_template_id FK
        TEXT task_template_id FK
        INTEGER order_index
        INTEGER points
        INTEGER item_time_limit_ms
        TEXT depends_on_item_id FK
        TEXT propagation_mode  "none|carry_numeric|carry_text|expression"
        TEXT propagation_label
        INTEGER created_at
    }

    TASK_SET_INSTANCES {
        TEXT id PK
        TEXT set_template_id FK
        TEXT child_id FK
        TEXT type  "exam|quiz|sequence"
        TEXT title
        TEXT description
        INTEGER time_limit_ms
        REAL passing_score
        TEXT status  "draft|running|completed|canceled"
        TEXT created_by_user_id FK
        INTEGER started_at
        INTEGER completed_at
        INTEGER created_at
        INTEGER updated_at
    }

    TASK_SET_INSTANCE_ITEMS {
        TEXT id PK
        TEXT set_instance_id FK
        TEXT task_instance_id FK
        INTEGER order_index
        INTEGER points
        INTEGER item_time_limit_ms
        TEXT depends_on_item_id FK
        TEXT propagation_mode  "none|carry_numeric|carry_text|expression"
        TEXT propagation_label
        INTEGER created_at
    }

    ATTEMPTS {
        TEXT id PK
        TEXT child_id FK
        TEXT task_instance_id FK
        TEXT task_set_id FK
        TEXT task_set_item_id FK
        TEXT attempt_client_id "UNIQUE_SCOPE"
        TEXT source  "digital|printed"
        TEXT answer_asset_id FK
        TEXT strokes_asset_id FK
        REAL score
        REAL presentation_score
        INTEGER correct  "0|1"
        TEXT summary_json
        INTEGER duration_ms
        INTEGER created_at
    }

    PROGRESS {
        TEXT id PK
        TEXT child_id FK
        TEXT topic_id FK
        REAL mastery  "0..1"
        INTEGER attempts_count
        INTEGER last_practiced_at
        TEXT history_json
        INTEGER created_at
        INTEGER updated_at
    }

    ASSETS ||--o{ TASK_INSTANCES : "solution_explanation"

    ASSETS {
        TEXT id PK
        TEXT owner_child_id FK
        TEXT type  "image|pdf|stroke_blob|task_definition|ocr_text"
        TEXT r2_bucket
        TEXT r2_key
        TEXT mime_type
        INTEGER size_bytes
        TEXT checksum_sha256
        INTEGER created_at
    }

    

    ACCESS_REQUESTS {
        TEXT id PK
        TEXT requester_user_id FK
        TEXT target_parent_user_id FK
        TEXT target_parent_email
        TEXT desired_persona_role  "parent|tutor|teacher|family"
        TEXT desired_access_level  "viewer|contributor|manager"
        TEXT status  "pending|accepted|declined|expired|canceled"
        TEXT token
        INTEGER expires_at
        TEXT message
        INTEGER created_at
        INTEGER updated_at
        INTEGER acted_at
        TEXT acted_by_user_id FK
    }

    SUBSCRIPTIONS {
        TEXT id PK
        TEXT user_id FK
        TEXT provider  "stripe"
        TEXT provider_customer_id
        TEXT provider_subscription_id
        TEXT plan_id
        TEXT status  "trialing|active|past_due|canceled|incomplete|incomplete_expired"
        INTEGER current_period_end
        INTEGER cancel_at_period_end  "0|1"
        INTEGER created_at
        INTEGER updated_at
    }

    %% Generation & ingestion entities are modeled in docs/assets/erd-generation.mmd


    %% Relationships (one-to-many where possible)
    USERS ||--o{ CHILDREN : "primary_parent"
    USERS ||--o{ CHILD_ACCESS : "has"
    CHILDREN ||--o{ CHILD_ACCESS : "memberships"

    LESSON_TEMPLATES ||--o{ LESSON_INSTANCES : "instantiates"
    CURRICULUM_TOPICS ||--o{ TASK_TEMPLATES : "templates"
    LESSON_TEMPLATES ||--o{ TASK_TEMPLATES : "includes"
    LESSON_INSTANCES ||--o{ TASK_INSTANCES : "includes"
    TASK_TEMPLATES ||--o{ TASK_INSTANCES : "materializes"
    TASK_INSTANCES ||--o{ TASK_INSTANCES : "refers_example"
    CHILDREN ||--o{ ATTEMPTS : "has"
    TASK_INSTANCES ||--o{ ATTEMPTS : "attempts"

    CHILDREN ||--o{ PROGRESS : "has"
    CURRICULUM_TOPICS ||--o{ PROGRESS : "tracked"

    CHILDREN ||--o{ ASSETS : "owns (optional)"

    USERS ||--o{ SUBSCRIPTIONS : "has"

    USERS ||--o{ ACCESS_REQUESTS : "requests"
    USERS ||--o{ ACCESS_REQUESTS : "targets" 

    %% See erd-generation.mmd for JOBS and related relationships

    %% Asset references from attempts
    ASSETS ||--o{ ATTEMPTS : "answer_asset"
    ASSETS ||--o{ ATTEMPTS : "strokes_asset"
    TASK_SET_TEMPLATES ||--o{ TASK_SET_TEMPLATE_ITEMS : "consists_of"
    TASK_TEMPLATES ||--o{ TASK_SET_TEMPLATE_ITEMS : "appears_in"
    TASK_SET_INSTANCES ||--o{ TASK_SET_INSTANCE_ITEMS : "consists_of"
    TASK_INSTANCES ||--o{ TASK_SET_INSTANCE_ITEMS : "appears_in"

    %% Additional user relationships
    USERS ||--o{ TASK_TEMPLATES : "created_by (optional)"
    USERS ||--o{ LESSON_TEMPLATES : "created_by (optional)"
    USERS ||--o{ CHILD_ACCESS : "invited_by (optional)"
